<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/btnshape"
            android:gravity="center"
            android:onClick="goLogin"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/index_login"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/index_logined"
            android:textColor="#999999"
            android:textSize="14sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btnshape"
            android:gravity="center"
            android:onClick="goRegister"
            android:paddingLeft="130dp"
            android:paddingRight="130dp"
            android:text="@string/index_register"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/index_registered"
            android:textColor="#999999"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>

