<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/register_reback_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="registerBack"
        android:src="@drawable/backbtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/register_welcome"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_user_edit"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:hint="@string/register_username"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/register_passwd_edit"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:hint="@string/register_pwd"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/reRegister_passwd_edit"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:hint="@string/register_repwd"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnshape"
        android:onClick="registerUser"
        android:text="@string/register_regbtn"
        android:textColor="#ffffff" />


</LinearLayout>

