<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    android:orientation="vertical"
    tools:context="com.briup.controller.LoginActivity">


    <ImageView
        android:id="@+id/login_reback_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="loginBack"
        android:src="@drawable/backbtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/login_welcome"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_user_edit"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:hint="@string/login_username"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/login_passwd_edit"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:hint="@string/login_pwd"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_rememberpwd"
            android:textColor="#FFCC66"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnshape"
        android:onClick="loginUser"
        android:text="@string/login_loginbtn"
        android:textColor="#ffffff" />

</LinearLayout>
