<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addbg"
    android:orientation="vertical"
    tools:context="com.briup.controller.AddDialogActivity" >

    <ImageView 
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/addfont"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal">
     <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dialog_jine"
            android:textSize="18sp"
            android:textColor="#330099"/>
        <EditText 
            android:id="@+id/addmoney"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:inputType="numberDecimal"
            android:background="@drawable/editborder"
            android:hint="@string/add_dialog_jinehint"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dialog_riqi"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:textColor="#330099"/>
        <TextView
            android:id="@+id/adddate"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:background="@drawable/editborder"
            android:onClick="selectDate"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="15sp"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_dialog_leixing"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="#330099"/>
        
        <Spinner
            android:id="@+id/typespinner"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:background="@drawable/editborder"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dialog_qianbao"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textColor="#330099"/>
        <Spinner
            android:id="@+id/qianbaospinner"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@drawable/editborder"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dialog_beizhu"
            android:textSize="18sp"
            android:textColor="#330099"/>
        <EditText 
            android:id="@+id/addbeizhu"
            android:layout_width="180dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/editborder"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <Button 
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/add_dialog_queding"
            android:background="#00AEFF"
            android:textColor="#ffffff"
            android:onClick="addshouru"/>
            
        <Button 
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/add_dialog_quxiao"
            android:layout_marginLeft="10dp"
            android:background="#00AEFF"
            android:textColor="#ffffff"
            android:onClick="quit"/>
    </LinearLayout>
    </LinearLayout>
    

</LinearLayout>