<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FCFF8A"
    tools:context="com.briup.controller.UpdateRecordActivity" >
   
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal">
        
     <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec_dialog_jine"
            android:textSize="18sp"
            android:textColor="#330099"/>
        
        <EditText 
            android:id="@+id/updatemoney"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:inputType="numberDecimal"
            android:background="@drawable/editborder"
            android:hint="@string/add_dialog_jinehint"/>
    </LinearLayout>
    
     <RadioGroup 
         android:id="@+id/shouzhiGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal">
         <RadioButton 
             android:id="@+id/danxuan_shouru"
             android:text="Income"/>
         <RadioButton 
             android:id="@+id/danxuan_zhichu"
             android:text="Expenditure"/>
     </RadioGroup>
     
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec_dialog_riqi"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:textColor="#330099"/>
        <TextView
            android:id="@+id/updatedate"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:background="@drawable/editborder"
            android:onClick="selectDate"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="15sp"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dec_dialog_leixing"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="#330099"/>
        
        <Spinner
            android:id="@+id/updatetypespinner"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:background="@drawable/editborder"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec_dialog_qianbao"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:textColor="#330099"/>
        <Spinner
            android:id="@+id/updateqianbaospinner"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@drawable/editborder"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec_dialog_beizhu"
            android:textSize="18sp"
            android:textColor="#330099"/>
        <EditText 
            android:id="@+id/updatebeizhu"
            android:layout_width="180dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/editborder"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <Button 
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/add_dialog_queding"
            android:background="#00AEFF"
            android:textColor="#ffffff"
            android:onClick="updateRecord"/>
            
        <Button 
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/add_dialog_quxiao"
            android:layout_marginLeft="10dp"
            android:background="#00AEFF"
            android:textColor="#ffffff"
            android:onClick="quit"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>
