<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.briup.controller.UpdatePwdActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/update_pwd_oldpwd"
            android:textSize="18sp"
            android:textColor="#330099"
            android:gravity="center_horizontal"/>
        <EditText 
            android:id="@+id/oldpwd"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            android:background="@drawable/editborder"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/update_pwd_newpwd"
            android:textSize="18sp"
            android:textColor="#330099"
            android:gravity="center_horizontal"/>
        <EditText 
            android:id="@+id/newpwd"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            android:background="@drawable/editborder"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView 
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/update_pwd_repwd"
            android:textSize="18sp"
            android:textColor="#330099"
            android:gravity="center_horizontal"/>
        <EditText 
            android:id="@+id/renewpwd"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            android:background="@drawable/editborder"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">
        <Button 
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/update_pwd_queding"
            android:background="#00AEFF"
            android:textColor="#ffffff"
            android:onClick="updatePwd"/>
            
        <Button 
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/update_pwd_quxiao"
            android:layout_marginLeft="10dp"
            android:background="#00AEFF"
            android:textColor="#ffffff"
            android:onClick="quit"/>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>
